GPencil: Parenting doesn't synchronize in a viewport in some cases #76703

Closed
opened 2020-05-13 00:41:02 +02:00 by n1729 · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 19:18, hash: 8956e9e5f6
Worked: 2.82

Short description of error
When you parent a bone to a GP layer, the layer doesn't follow bone's transformation in pose mode in a particular condition.

Exact steps for others to reproduce the error

  1. Add an armature (Shift A > Armature)
  2. Add a stroke (Shift A > Grease Pencil > Stroke)
  3. Select the stroke and go to data tab in properties editor
  4. Set a parent to "Lines" layer (Relations > Parent: "Armature", Type: "Bone", Bone: "Bone")
  5. Select the armature and go to pose mode
  6. Can't move the stroke by rotating the bone

Note: Once you go to edit mode of the armature before going to pose mode, it works.

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-11 19:18, hash: `8956e9e5f6` Worked: 2.82 **Short description of error** When you parent a bone to a GP layer, the layer doesn't follow bone's transformation in pose mode in a particular condition. **Exact steps for others to reproduce the error** 1. Add an armature (Shift A > Armature) 2. Add a stroke (Shift A > Grease Pencil > Stroke) 3. Select the stroke and go to data tab in properties editor 4. Set a parent to "Lines" layer (Relations > Parent: "Armature", Type: "Bone", Bone: "Bone") 5. Select the armature and go to pose mode 6. Can't move the stroke by rotating the bone Note: Once you go to edit mode of the armature before going to pose mode, it works.
Author

Added subscriber: @n1729

Added subscriber: @n1729

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez self-assigned this 2020-05-13 10:20:28 +02:00
Member

Added subscribers: @antoniov, @lichtwerk

Added subscribers: @antoniov, @lichtwerk
Antonio Vazquez was unassigned by Philipp Oeser 2020-05-13 11:05:04 +02:00
Philipp Oeser self-assigned this 2020-05-13 11:05:04 +02:00

This issue was referenced by eb27595ac4

This issue was referenced by eb27595ac486c2321a12e77f832a1c37bccbd143
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by 61a3d55d06

This issue was referenced by 61a3d55d06ee0b197344df086e67e8a8d8f1da2c
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76703
No description provided.