Fix T76703: GPencil bone parenting missing dependency update

Maniphest Tasks: T76703

Differential Revision: https://developer.blender.org/D7715